--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
         "*"
     ],
     "main": "./out/extension.js",
-    "contributes": {},
+    "contributes": {
+        "views": {
+            "explorer": [
+                {
+                    "id": "ramUsageView",
+                    "name": "RAM Usage",
+                    "when": "workspaceHasFolder"
+                }
+            ]
+        }
+    },
     "scripts": {
         "vscode:prepublish": "yarn run compile",
         "compile": "tsc -p ./",
@@ -23,16 +33,14 @@
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/vscode": "^1.76.0",
         "@types/glob": "^8.1.0",
         "@types/mocha": "^10.0.1",
         "@types/node": "16.x",
+        "@types/vscode": "^1.76.0",
         "@typescript-eslint/eslint-plugin": "^5.53.0",
         "@typescript-eslint/parser": "^5.53.0",
         "eslint": "^8.34.0",
-        "glob": "^8.1.0",
         "mocha": "^10.2.0",
-        "typescript": "^4.9.5",
-        "@vscode/test-electron": "^2.2.3"
+        "typescript": "^5.0.2"
     }
 }
