--- a/package.json
+++ b/package.json
@@ -39,13 +39,12 @@
         "@types/vscode": "^1.76.0",
         "@typescript-eslint/eslint-plugin": "^5.53.0",
         "@typescript-eslint/parser": "^5.53.0",
+        "@vscode/test-electron": "^2.2.3",
         "eslint": "^8.34.0",
-        "mocha": "^10.2.0",
-        "typescript": "^5.0.2"
+        "glob": "^8.1.0",
+        "typescript": "^4.9.5"
     },
     "dependencies": {
-        "@vscode/test-electron": "^2.3.0",
-        "acorn": "^8.8.2",
         "acorn-walk": "^8.2.0"
     }
 }
