--- a/package.json
+++ b/package.json
@@ -1,41 +1,107 @@
 {
-    "name": "bitburner-ram-usage",
-    "displayName": "Bitburner RAM Usage",
-    "description": "",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.76.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [
-        "*"
-    ],
-    "main": "./out/extension.js",
-    "contributes": {},
-    "scripts": {
-        "vscode:prepublish": "yarn run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "yarn run compile && yarn run lint",
-        "lint": "eslint src --ext ts",
-        "test": "node ./out/test/runTest.js"
-    },
-    "devDependencies": {
-        "@types/glob": "^8.1.0",
-        "@types/mocha": "^10.0.1",
-        "@types/node": "16.x",
-        "@types/vscode": "^1.76.0",
-        "@typescript-eslint/eslint-plugin": "^5.53.0",
-        "@typescript-eslint/parser": "^5.53.0",
-        "@vscode/test-electron": "^2.2.3",
-        "eslint": "^8.34.0",
-        "glob": "^8.1.0",
-        "mocha": "^10.2.0",
-        "typescript": "^4.9.5"
-    },
-    "dependencies": {
-        "acorn-walk": "^8.2.0"
-    }
+   "name": "bitburner-ram-usage",
+   "displayName": "Bitburner RAM Usage",
+   "version": "0.0.1",
+   "description": "",
+   "categories": [
+      "Other"
+   ],
+   "main": "./out/extension.js",
+   "scripts": {
+      "compile": "tsc -p ./",
+      "lint": "prettier --write . && eslint . --fix && sort-package-json",
+      "pretest": "yarn run compile && yarn run lint",
+      "test": "node ./out/test/runTest.js",
+      "up": "yarn install && npm-check-updates -u && yarn upgrade && sort-package-json",
+      "vscode:prepublish": "yarn run compile",
+      "watch": "tsc -watch -p ./"
+   },
+   "contributes": {},
+   "activationEvents": [
+      "*"
+   ],
+   "prettier": {
+      "quoteProps": "preserve",
+      "semi": false,
+      "singleQuote": false,
+      "tabWidth": 3,
+      "trailingComma": "es5"
+   },
+   "eslintConfig": {
+      "env": {
+         "browser": true,
+         "es2021": true,
+         "es6": true
+      },
+      "parserOptions": {
+         "ecmaFeatures": {
+            "jsx": true
+         },
+         "ecmaVersion": "latest",
+         "sourceType": "module"
+      },
+      "plugins": [
+         "sonarjs"
+      ],
+      "extends": [
+         "eslint:recommended",
+         "plugin:@typescript-eslint/recommended",
+         "plugin:prettier/recommended"
+      ],
+      "rules": {},
+      "overrides": [
+         {
+            "files": [
+               "**/*.ts",
+               "**/*.tsx"
+            ],
+            "parser": "@typescript-eslint/parser",
+            "parserOptions": {
+               "ecmaVersion": "latest",
+               "project": "./tsconfig.json",
+               "sourceType": "module"
+            },
+            "plugins": [
+               "@typescript-eslint"
+            ],
+            "extends": [
+               "eslint:recommended",
+               "plugin:@typescript-eslint/recommended",
+               "plugin:prettier/recommended"
+            ],
+            "rules": {
+               "no-constant-condition": [
+                  "off"
+               ],
+               "@typescript-eslint/no-floating-promises": "error"
+            }
+         }
+      ],
+      "root": true
+   },
+   "eslintIgnore": [
+      "node_modules/**",
+      "out/**"
+   ],
+   "dependencies": {
+      "acorn-walk": "^8.2.0",
+      "prettier": "^2.8.7",
+      "sort-package-json": "^2.4.1"
+   },
+   "devDependencies": {
+      "@types/glob": "^8.1.0",
+      "@types/mocha": "^10.0.1",
+      "@types/node": "18.x",
+      "@types/vscode": "^1.76.0",
+      "@typescript-eslint/eslint-plugin": "^5.56.0",
+      "@typescript-eslint/parser": "^5.56.0",
+      "@vscode/test-electron": "^2.3.0",
+      "eslint": "^8.36.0",
+      "glob": "^9.3.2",
+      "mocha": "^10.2.0",
+      "typescript": "^5.0.2"
+   },
+   "engines": {
+      "vscode": "^1.76.0"
+   }
 }
